js/js.translator/testData/incremental/invalidation/breakKlibBinaryCompatibilityWithVariance/lib1/l1.1.kt
interface GenericInterface<out T>

interface TestInterface {
    fun <T> test(f: () -> GenericInterface<T>) {}
}
